--- a/HideTheColors/Base.lproj/Main.storyboard
+++ b/HideTheColors/Base.lproj/Main.storyboard
@@ -1,25 +1,80 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HideTheColors" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDn-Um-zLM">
+                                <rect key="frame" x="189" y="390" width="89" height="30"/>
+                                <state key="normal" title="Hide the Red">
+                                    <color key="titleColor" red="1" green="0.020532956710662131" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="KırmızıyıGizle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dhc-RV-Sob"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="kırmızı-renk" translatesAutoresizingMaskIntoConstraints="NO" id="4AS-PQ-PCQ">
+                                <rect key="frame" x="49" y="49" width="229" height="136"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="425048022406" translatesAutoresizingMaskIntoConstraints="NO" id="KyQ-L5-Ks0">
+                                <rect key="frame" x="49" y="216" width="229" height="136"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thd-pq-rTj">
+                                <rect key="frame" x="49" y="390" width="92" height="30"/>
+                                <state key="normal" title="Hide the Blue"/>
+                                <connections>
+                                    <action selector="MaviyiGizle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bDe-cY-qNx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NzM-2s-LAk">
+                                <rect key="frame" x="48" y="449" width="95" height="30"/>
+                                <state key="normal" title="Show the Red">
+                                    <color key="titleColor" red="1" green="0.020532956710662131" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="KırmızıyıGöster:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fgo-hb-RuT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XX9-Lc-RrN">
+                                <rect key="frame" x="184" y="449" width="98" height="30"/>
+                                <state key="normal" title="Show the Blue"/>
+                                <connections>
+                                    <action selector="MaviyiGöster:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O08-dT-Zg6"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="gizleKırmızı" destination="TDn-Um-zLM" id="ZV5-tZ-Aeh"/>
+                        <outlet property="gizleMavi" destination="Thd-pq-rTj" id="8z6-aO-sVz"/>
+                        <outlet property="gösterKırmızı" destination="NzM-2s-LAk" id="aFl-3S-oyo"/>
+                        <outlet property="gösterMavi" destination="XX9-Lc-RrN" id="KQM-oG-sjl"/>
+                        <outlet property="kırmızı" destination="4AS-PQ-PCQ" id="1Hq-cL-PWb"/>
+                        <outlet property="mavi" destination="KyQ-L5-Ks0" id="cf4-Pp-ULq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="245" y="310"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="425048022406" width="640" height="384"/>
+        <image name="kırmızı-renk" width="445" height="343"/>
+    </resources>
 </document>
